--- a/bilibil_keyword_Crawler-main/caozuo/templates/index.html
+++ b/bilibil_keyword_Crawler-main/caozuo/templates/index.html
@@ -18,6 +18,8 @@
 <body>
     <h2>Neo4j 图关系操作界面</h2>
     <p><a href="{{ url_for('list_triples') }}">查看所有三元组</a></p>
+    <p><a href="{{ url_for('relations_page') }}">查看所有关系</a></p>
+    <p><a href="{{ url_for('entities_page') }}">查看所有实体</a></p>
 
     <div class="section">
         <h3>1. 查询实体关系</h3>
